--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Floonic Automation - Automate your business</title>
+    <title>Floonic Automation | Automate your business</title>
+    <meta name="description" content="Automate your business with Floonic Automation. We provide a platform to automate your business processes and improve efficiency." />
+    <meta name="keywords" content="automation, business, efficiency, Floonic" />
+    <meta name="author" content="Floonic Automation" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta property="og:title" content="Floonic Automation" />
+    <meta property="og:description" content="Automate your business with Floonic Automation. We provide a platform to automate your business processes and improve efficiency." />
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
